# mattpy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
mattpy/: __init__.py
mattpy/vis/: __init__.py  nematic_plot.py
